# network

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.serena/: project.yml
backend/: main.py
backend/app/: __init__.py
backend/app/api/: __init__.py  configs.py  devices.py  inventory.py  scrapli.py  tasks.py
backend/app/core/: config.py  database.py  logging.py  request_logging.py
backend/app/models/: database.py
backend/app/services/: config_backup_scheduler.py  config_snapshot_service.py  inventory_service.py  task_runner.py
backend/app/services/nornir/: __init__.py  commands.py  config_commands.py  connection_hygiene.py  device_ops.py  factory.py  inventory_ops.py  manager.py  results.py  scrapli_registry.py  scrapli_runner.py  timeouts.py
backend/inventory_plugin/: __init__.py  postgres_inventory.py
config/: nornir_config.yml
docs/: API_EXAMPLES.md  ARCHITECTURE.md  HUAWEI_H3C_SUPPORT.md  INVENTORY_GUIDE.md  PLATFORM_SUPPORT.md  QUICK_START.md  SCRAPLI_PLATFORMS.md
frontend/: README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: app-shell.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  table.tsx  textarea.tsx
frontend/src/pages/: execute-page.tsx  inventory-page.tsx  not-found-page.tsx  tasks-page.tsx
frontend/src/styles/: globals.css
scripts/: check_platforms.py  init_database.py  list_all_platforms.py  quick_huawei_test.py  simple_huawei_test.py  smoke_nornir_scrapli.py  start.sh  stop.sh  test_huawei_devices.py
其他项目/nornir-vsr/: .env.example  README.md  SNMP_MODULE_README.md  ecosystem.config.js  snmp.md
其他项目/nornir-vsr/backend/: main.py  requirements.txt
其他项目/nornir-vsr/backend/app/: dependencies.py  security.py
其他项目/nornir-vsr/backend/core/base/: singleton.py
其他项目/nornir-vsr/backend/core/config/: config.py
其他项目/nornir-vsr/backend/core/db/: database.py  (+1 more)
其他项目/nornir-vsr/backend/routers/: __init__.py  auth.py  defaults.py  hosts.py  install.py  nornir.py  snmp.py  terminal.py  users.py
其他项目/nornir-vsr/backend/schemas/: auth.py  defaults.py  host.py  install.py  license.py  nornir.py  snmp.py  user.py
其他项目/nornir-vsr/backend/scripts/: add_snmp_metric_collectors.py  cleanup_snmp_collectors.py  init_snmp.py
其他项目/nornir-vsr/backend/services/: address_pool.py  snmp.py  snmp_collectors.py  snmp_scheduler.py
其他项目/nornir-vsr/frontend/: STYLE_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts
其他项目/nornir-vsr/frontend/src/: App.tsx
(+80 files in other folders)
